New subsystem added

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -42,12 +42,13 @@
           <li><a href="#mozTocId501089">Chapter 4. Animation subsystem</a></li>
           <li><a href="#mozTocId904725">Chapter 5. Image kind</a></li>
           <li><a href="#mozTocId738557">Chapter 6. Background</a></li>
-          <li><a href="#mozTocId309905">Chapter 7. Base sprite subsystem</a></li>
-          <li><a href="#mozTocId662651"> Chapter 8. Ordinary sprites</a></li>
-          <li><a href="#mozTocId656897">Chapter 9. Static sprites</a></li>
-          <li><a href="#mozTocId146800">Chapter 10. Sprite sheet</a></li>
-          <li><a href="#mozTocId752257">Chapter 11. Text</a></li>
-          <li><a href="#mozTocId67980">Chapter 12. Loading images</a></li>
+          <li><a href="#mozTocId946803">Chapter 7. Static background</a></li>
+          <li><a href="#mozTocId309905">Chapter 8. Base sprite subsystem</a></li>
+          <li><a href="#mozTocId662651"> Chapter 9. Ordinary sprites</a></li>
+          <li><a href="#mozTocId656897">Chapter 10. Static sprites</a></li>
+          <li><a href="#mozTocId146800">Chapter 11. Sprite sheet</a></li>
+          <li><a href="#mozTocId752257">Chapter 12. Text</a></li>
+          <li><a href="#mozTocId67980">Chapter 13. Loading images</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId861378">Part 4. Transformation</a>
@@ -331,6 +332,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
+
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -670,7 +672,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;"> Background texture</span><br>
       <br>
       Background don't draw if background texture is don't exist. Background
-      texture will automatically create after call <span style="font-style: italic;">load_background</span>
+      texture will automatically create after call <span style="font-style: italic;">load</span>
       method.<br>
       <br>
       <span style="text-decoration: underline;"> Important notice</span><br>
@@ -678,7 +680,81 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Always call <span style="font-style: italic;">prepare</span> method after
       load background.<br>
     </big>
-    <h2><a name="mozTocId309905" class="mozTocH2"></a><big>Chapter 7. Base
+    <h2><a class="mozTocH2" name="mozTocId946803"></a><big>Chapter 7. Static
+        background</big></h2>
+    <big><span style="text-decoration: underline;">A few words about static
+        background</span><br>
+      <br>
+      The static background is simple kind of backgrounds. It contain one frame
+      only.<br>
+    </big><big><br>
+      <span style="text-decoration: underline;"> Work with background</span><br>
+      <br>
+      Just use <span style="font-style: italic;">Scene</span> class to work
+      with static background. Let's look at public methods.<br>
+      <br>
+      <span style="font-style: italic;">Scene* Scene::get_handle();</span> –
+      Return the handle to background object.<br>
+    </big><big><br style="font-style: italic;">
+      <span style="font-style: italic;"> void Scene::prepare(const Screen
+        *screen);</span> – Prepare for drawing.<br>
+      <br>
+      <span style="font-style: italic;"> void Scene::prepare(Screen
+        &amp;screen);</span> – Prepare for drawing.<br>
+      <br>
+      <span style="font-style: italic;"> void Scene::prepare(const unsigned int
+        width,const unsigned int heigt);</span> – Prepare for drawing.<br>
+      <br>
+      <span style="font-style: italic;">void Scene::disable_mirror();</span> –
+      Disable background mirroring mode.<br>
+      <br>
+      <span style="font-style: italic;">void Scene::horizontal_mirror();</span>
+      – Set horizontal background mirroring mode.<br>
+      <br>
+      <span style="font-style: italic;">void Scene::vertical_mirror();</span> –
+      Set vertical background mirroring mode.<br>
+      <br>
+      <span style="font-style: italic;">void Scene::complex_mirror();</span> –
+      Set both horizontal and vertical background mirroring mode.<br>
+      <span style="font-style: italic;"></span><span style="font-style: italic;"></span></big><big><br>
+      <span style="font-style: italic;"> void Scene::load(Image *background);</span>
+      – Load static background from the buffer.<br>
+      <br>
+      <span style="font-style: italic;"> void Scene::load(Image
+        &amp;background);</span> – Load static background </big><big>from the
+      buffer</big><big>.<br>
+      <br>
+    </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
+
+      style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
+      – Load static background from target file.</big><br>
+    <big><br>
+      <span style="font-style: italic;"> void Scene::draw();</span> – Draw a
+      background.<br>
+      <span style="font-style: italic;"></span><br>
+      <span style="font-style: italic;"> void Scene::destroy_image();</span> –
+      Destroy a background image.<br>
+      <br>
+      <span style="font-style: italic;"> void Scene::destroy();</span> – Destroy
+      a background image and destroy a background texture.<br>
+      <span style="font-style: italic;"></span><br>
+      <span style="font-style: italic;"> unsigned int Scene::get_width() const;</span>
+      – Return the width of the background.<br>
+      <br>
+      <span style="font-style: italic;"> unsigned int Scene::get_height() const;</span>
+      – Return the height of the background.<br>
+      <span style="font-style: italic;"></span><br>
+      <span style="text-decoration: underline;"> Background texture</span><br>
+      <br>
+      Background don't draw if background texture is don't exist. Background
+      texture will automatically create after call <span style="font-style: italic;">load</span>
+      method.<br>
+      <br>
+      <span style="text-decoration: underline;"> Important notice</span><br>
+      <br>
+      Always call <span style="font-style: italic;">prepare</span> method after
+      load background.</big><br>
+    <h2><a name="mozTocId309905" class="mozTocH2"></a><big>Chapter 8. Base
         sprite subsystem</big></h2>
     <big> </big><big><span style="text-decoration: underline;">Small important
         thing</span><br>
@@ -802,7 +878,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         int x, const unsigned int y);</i> – Set transparent mode and draw a
       sprite at target position.</big><br>
     <big> </big>
-    <h2><a name="mozTocId662651" class="mozTocH2"></a><big> Chapter 8. Ordinary
+    <h2><a name="mozTocId662651" class="mozTocH2"></a><big> Chapter 9. Ordinary
         sprites</big></h2>
     <big><span style="text-decoration: underline;"> Sprite types</span><br>
       <br>
@@ -878,7 +954,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Sprite will don't draw if sprite texture is don't exist. Sprite texture
       will automatically create when load or clone sprite.<br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId656897"></a><big>Chapter 9. Static
+    <h2><a class="mozTocH2" name="mozTocId656897"></a><big>Chapter 10. Static
         sprites</big></h2>
     <big><span style="text-decoration: underline;">A few words about static
         sprite</span><br>
@@ -921,7 +997,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Sprite will don't draw if sprite texture is don't exist. Sprite texture
       will automatically create when load or clone sprite.</big><br>
     <big> </big>
-    <h2><a name="mozTocId146800" class="mozTocH2"></a><big>Chapter 10. Sprite
+    <h2><a name="mozTocId146800" class="mozTocH2"></a><big>Chapter 11. Sprite
         sheet</big></h2>
     <big><span style="text-decoration: underline;"> Some words about sprite
         sheet</span><br>
@@ -1015,7 +1091,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       sheet texture will automatically create after call <span style="font-style: italic;">load_sheet</span>
       method.<br>
     </big>
-    <h2><a name="mozTocId752257" class="mozTocH2"></a><big>Chapter 11. Text</big></h2>
+    <h2><a name="mozTocId752257" class="mozTocH2"></a><big>Chapter 12. Text</big></h2>
     <big><span style="text-decoration: underline;"> How to draw a text?</span><br>
       <br>
       Just use text subsystem to draw a text. This subsystem need a font for
@@ -1124,7 +1200,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;"> void Text::destroy_font();</span> –
       Destroy a font image and destroy a font texture.<br>
     </big><big> </big>
-    <h2><a name="mozTocId67980" class="mozTocH2"></a><big>Chapter 12. Loading
+    <h2><a name="mozTocId67980" class="mozTocH2"></a><big>Chapter 13. Loading
         images</big></h2>
     <big><span style="text-decoration: underline;"> Load an image from files</span><br>
       <br>
@@ -1305,6 +1381,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
+
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -1319,7 +1396,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       column.<br>
       <br>
       <span style="font-style: italic;">int World::get_target_y(const int row</span></big><big
-
       style="font-style: italic;">,</big><big style="font-style: italic;">const
       int column</big><big><span style="font-style: italic;">) const;</span> –
       Get target cartesian y-coordinate </big><big>from the row and column.<br>
@@ -1329,7 +1405,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         const;</span> – Get the row from target point.<br>
       <br>
       <span style="font-style: italic;">int World::get_column(const int y</span></big><big
-
       style="font-style: italic;">,</big><big style="font-style: italic;">const
       int y</big><big><span style="font-style: italic;">) const;</span> – Get
       the column</big><big> from target point.<br>
@@ -1484,6 +1559,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
+
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -1586,10 +1662,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2737,7 +2815,8 @@ Multimedia API</a>. </big>
       7.9.1 – Base sprite subsystem improved.<br>
       7.9.2 – Background subsystem improved.<br>
       7.9.3 – New subsystem added.<br>
+      7.9.4 – New subsystem added.<br>
     <p></p>
-    <big> </big>
+    <big> <big> </big> </big>
   </body>
 </html>
