--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -332,7 +332,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
-
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -725,7 +724,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       buffer</big><big>.<br>
       <br>
     </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load static background from target file.</big><br>
     <big><br>
@@ -1028,12 +1026,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         int target) const;</span> – Return true if target column is valid.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
-
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
-
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -1130,6 +1126,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="font-style: italic;"> Text</span> class provide a simple
       interface to text subsystem. Let's look at public methods.<br>
+      <br>
+      <span style="font-style: italic;">Text* Text::get_handle();</span> –
+      Return the handle to text drawing subsystem.<br>
       <br>
       <span style="font-style: italic;"> EUGENEGDK::TEXT_KIND
         Text::get_orientation() const;</span> – Get current text orientation.<br>
@@ -1272,6 +1271,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       convert screen coordinates to cartesian coordinates.<br>
       Just use <span style="font-style: italic;">Coordinates</span> class for
       doing it. Let's look at public methods.<br>
+      <br>
+      <span style="font-style: italic;">Coordinates* Coordinates::get_handle();</span>
+      – Return the handle to coordinates conversion subsystem.<br>
       <br style="font-style: italic;">
       <span style="font-style: italic;">void Coordinates::initialize(const int
         viewport_width,const int viewport_height);</span> – Initialize the
@@ -1340,6 +1342,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Just use <span style="font-style: italic;">Isometric</span> class for
       doing it. Let's look at public methods.<br>
       <br>
+      <span style="font-style: italic;">Isometric* Isometric::get_handle();</span>
+      – Return the handle to isometric subsystem.<br>
+      <br>
     </big><big><span style="font-style: italic;">void
         Isometric::set_target(const int x,const int y);</span> – Set target
       point.<br>
@@ -1381,9 +1386,11 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
-
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
+      <br>
+      <span style="font-style: italic;">World* World::get_handle();</span> –
+      Return the handle to isometric level subsystem.<br>
       <br>
       <span style="font-style: italic;">void World::initialize(const int
         tile_width,const int tile_height,</span></big><big><span style="font-style: italic;">const
@@ -1437,6 +1444,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big> Timer is a very useful thing. Just use <span style="font-style: italic;">Timer</span>
       class to work with the timer. Let's look at public methods.<br>
       <br>
+      <span style="font-style: italic;">Timer* Timer::get_handle();</span> –
+      Return the handle to the timer.<br>
+      <br>
       <span style="font-style: italic;"> void Timer::set_timer(const double
         seconds); </span>– Set timer interval and initialize start point.<br>
       <br>
@@ -1472,6 +1482,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;"> Collision</span> class provide easy
       access to collision detector. It is a simple class with few methods. Let's
       look at public methods.<br>
+      <br style="font-style: italic;">
+      <span style="font-style: italic;">Collision* Collision::get_handle();</span>
+      – Return the handle to the collision detector.<br>
     </big><br>
     <big><span style="font-style: italic;">void Collision::set_target(const
         EUGENEGDK::BOX &amp;first_target,const EUGENEGDK::BOX
@@ -1502,6 +1515,9 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">Tilemap</span> class provide easy access
       to the tile</big><big>–</big><big>map. It is a simple class with few
       methods. Let's look at public methods.<br>
+      <br>
+      <span style="font-style: italic;">Tilemap* Tilemap::get_handle();</span> –
+      Return the handle to tile-map subsystem.<br>
       <br>
       <span style="font-style: italic;">void Tilemap::initialize(const unsigned
         int tile_width,const unsigned int tile_height);</span> – Initialize the
@@ -1559,7 +1575,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
-
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -1662,12 +1677,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2816,7 +2829,9 @@ Multimedia API</a>. </big>
       7.9.2 – Background subsystem improved.<br>
       7.9.3 – New subsystem added.<br>
       7.9.4 – New subsystem added.<br>
+      7.9.5 – Small changes.<br>
+    </big>
     <p></p>
-    <big> <big> </big> </big>
+    <big> <big> <big> </big> </big> </big>
   </body>
 </html>
