Image resizer improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2849,6 +2849,7 @@ Multimedia
       7.9.4 – New subsystem added.<br>
       7.9.5 – 7.9.6 – Small changes.<br>
       7.9.7 – Base sprite subsystem improved.<br>
+      7.9.8 – Image resizer improved.<br>
     <p></p>
     <big> <big> <big> </big> </big> </big>
   </body>
