Image resizer improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2849,8 +2849,11 @@ Multimedia
       7.9.4 – New subsystem added.<br>
       7.9.5 – 7.9.6 – Small changes.<br>
       7.9.7 – Base sprite subsystem improved.<br>
-      7.9.8 – Image resizer improved.<br>
+      7.9.8 – Image loader improved.<br>
+      7.9.9 – Small changes.<br>
+      8.0 – 8.0.2 – Image resizer improved.<br>
+      8.0.3 – Small changes.<br>
+     </big>
     <p></p>
-    <big> <big> <big> </big> </big> </big>
   </body>
 </html>
