--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2856,6 +2856,9 @@ Multimedia API</a>. </big>
       7.9.9 – Small changes.<br>
       8.0 – 8.0.2 – Image resizer improved.<br>
       8.0.3 – 8.0.5 – Small changes.<br>
+      8.0.6 – Image resizer back-ported from Eugene game development kit 7.9.9.<br>
+      8.0.7 – Image resizer improved.<br>
+      8.0.7 – Texture loader improved.<br>
     </big>
     <p></p>
   </body>
