--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2859,6 +2859,10 @@ Multimedia API</a>. </big>
       8.0.6 – Image resizer back-ported from Eugene game development kit 7.9.9.<br>
       8.0.7 – Image resizer improved.<br>
       8.0.8 – 8.0.9 – Texture loader improved.<br>
+      8.1 – 8.1.1 – Picture subsystem improved.<br>
+      8.1.2 – Image resizer back-ported from Eugene game development kit 8.0.5.<br>
+      8.1.3 – Texture loader improved.<br>
+      8.1.4 – Small changes.<br>
     </big>
     <p></p>
   </body>
