--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2863,6 +2863,7 @@ Multimedia API</a>. </big>
       8.1.2 – Image resizer back-ported from Eugene game development kit 8.0.5.<br>
       8.1.3 – Texture loader improved.<br>
       8.1.4 – Small changes.<br>
+      8.1.5 – Image resizer improved.<br>
     </big>
     <p></p>
   </body>
