--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2864,6 +2864,7 @@ Multimedia API</a>. </big>
       8.1.3 – Texture loader improved.<br>
       8.1.4 – Small changes.<br>
       8.1.5 – Image resizer improved.<br>
+      8.1.6 – Small changes.<br>
     </big>
     <p></p>
   </body>
