Small bug in the tile-map subsystem fixed

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2865,6 +2865,7 @@ Multimedia API</a>. </big>
       8.1.4 – Small changes.<br>
       8.1.5 – Image resizer improved.<br>
       8.1.6 – 8.1.7 – Small changes.<br>
+      8.1.8 – Small bug in the tile-map subsystem fixed.<br>
     </big>
     <p></p>
   </body>
