--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2866,6 +2866,7 @@ Multimedia API</a>. </big>
       8.1.5 – Image resizer improved.<br>
       8.1.6 – 8.1.7 – Small changes.<br>
       8.1.8 – Small bug in the tile-map subsystem fixed.<br>
+      8.1.9 – Small bug with keyboard input subsystem and mouse input subsystem fixed.<br>
     </big>
     <p></p>
   </body>
